[metadata]
name = line-profiler-gui
version = attr: lineprofilergui.__version__
description = A Qt GUI to run and display line by line profiling data using line_profiler
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Joseph Martinot-Lagarde
author_email = contrebasse+pypi@gmail.com
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: System :: Benchmark
    Topic :: Utilities
keywords = profiling, profiler, line_profiler, gui, Qt

[options]
packages = lineprofilergui
install_requires =
    line-profiler
    qtpy
python_requires = >=3.6

[options.extras_require]
PyQt5 = pyqt5
PySide2 = pyside2

[options.entry_points]
gui_scripts =
    lineprofilergui = lineprofilergui.main:main
